Fixed img alignment

--- a/static/style.css
+++ b/static/style.css
@@ -39,6 +39,10 @@ h1 {
   margin-top: 10px;
 }
 
+#homePage img {
+  margin-left: -20px; 
+}
+
 .button-row {
   display: flex;
   gap: 20px;
